# rhsp3

./: Cargo.toml  LICENSE.md
crates/rhsp3_common/: Cargo.toml
crates/rhsp3_common/src/: lib.rs
crates/rhsp3_internal_abi/: Cargo.toml  update_headers.sh
crates/rhsp3_internal_abi/src/: hsp3struct.rs  lib.rs
crates/rhsp3_internal_common/: Cargo.toml
crates/rhsp3_internal_common/src/: ctx.rs  errors.rs  hsp_errors.rs  lib.rs  logger.rs  plugin.rs
crates/rhsp3_internal_common/tests/: errors.rs
crates/rhsp3_internal_macros/: Cargo.toml
crates/rhsp3_internal_macros/src/: lib.rs  plugsdk.rs  utils.rs
crates/rhsp3_internal_plugabi/: Cargo.toml  update_headers.sh
crates/rhsp3_internal_plugabi/src/: hsp3struct.rs  lib.rs
crates/rhsp3_plugsdk/: Cargo.toml
crates/rhsp3_plugsdk/src/: codegen.rs  ffi_type.rs  handles.rs  hspctx.rs  lib.rs  utils.rs
crates/rhsp3_plugsdk/src/dylib_hspctx/: ctx.rs  ctx_fns.rs  mod.rs  rt_funcs.rs  var_buffer.rs  var_impl.rs  var_proc.rs  var_type.rs
crates/rhsp3_plugsdk/src/dylib_hspctx/var_impl/: impl_numeric.rs  impl_str.rs  mod.rs
crates/rhsp3_plugsdk/src/var_type/: impl_integral.rs  impl_numeric.rs  impl_str.rs  mod.rs
data/examples/: README.txt  auto_test.hsp
data/examples/exrand/: README_en.txt  README_jp.txt  exrand_en.txt  exrand_jp.txt  readme.txt  sample_en.hsp  sample_jp.hsp
data/examples/z/: README_en.txt  README_jp.txt  test_file.as  test_file.hsp  test_file_en.hsp  test_file_jp.hsp  test_mem.as  test_mem_en.hsp  z.txt  z_en.txt  z_jp.txt
examples/exrand_hpi/: Cargo.toml  README.md
examples/exrand_hpi/examples/: exrand_hpi_as.rs  exrand_hpi_cdylib.rs  exrand_sample.hsp
examples/exrand_hpi/src/: lib.rs
examples/exrand_hpi/tests/: unify_functions.rs
examples/z_hpi/: Cargo.toml  README.md
examples/z_hpi/examples/: z_hpi_as.rs  z_hpi_cdylib.rs
examples/z_hpi/src/: lib.rs
scripts/: build_all.sh
