[package]
name = "rhsp3_plugsdk"
version = "0.1.0"
edition = "2021"

[features]
cdylib = ["rhsp3_internal_macros/plugsdk_cdylib", "rhsp3_internal_common/plugsdk_cdylib"]

[dependencies]
encoding_rs = "0.8.31"
log = "0.4.17"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }

rhsp3_internal_abi = { path = "../rhsp3_internal_abi" }
rhsp3_internal_common = { path = "../rhsp3_internal_common", features = ["plugsdk"] }
rhsp3_internal_macros = { path = "../rhsp3_internal_macros", features = ["plugsdk"] }
