[package]
name = "rhsp3_plugsdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["init_log"]
cdylib = ["rhsp3_internal_macros/plugsdk_cdylib", "rhsp3_internal_common/plugsdk_cdylib"]
init_log = ["pretty_env_logger"]

[dependencies]
anymap = "1.0.0-beta.2"
encoding_rs = "0.8.31"
log = "0.4.17"
pretty_env_logger = { version = "0.4.0", optional = true }

rhsp3_internal_abi = { path = "../rhsp3_internal_abi" }
rhsp3_internal_common = { path = "../rhsp3_internal_common", features = ["plugsdk"] }
rhsp3_internal_macros = { path = "../rhsp3_internal_macros", features = ["plugsdk"] }
