[package]
name = "rhsp3_plugsdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["init_log"]
cdylib = ["rhsp3_internal_macros/plugsdk_cdylib", "rhsp3_internal_common/plugsdk_cdylib"]
init_log = ["rhsp3_internal_common/logging"]

[dependencies]
anymap = "1.0.0-beta.2"
encoding_rs = "0.8.31"
log = "0.4.17"
modinverse = "0.1.1"
twox-hash = { version = "1.6.3", default-features = false }

rhsp3_internal_abi = { path = "../rhsp3_internal_abi" }
rhsp3_internal_common = { path = "../rhsp3_internal_common", features = ["plugsdk"] }
rhsp3_internal_macros = { path = "../rhsp3_internal_macros", features = ["plugsdk"] }
